# timetrack

./: .gitignore  Cargo.toml  README.md  build.rs  featurelist.md
src/: cli.rs  events.rs  lib.rs  main.rs  options.rs  timetrack.yaml
src/views/: mod.rs  show_default.rs  show_msdynamics.rs  viewer.rs
