# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "timetrack"
version = "0.1.0"
authors = ["torsteinnh <torsteinnh@gmail.com>"]
edition = "2021"

[lib]
name = "timetrack"

[[bin]]
name = "timetrack"


[dependencies]
clap = { version = "3.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parse_duration = "2.1"
dirs = "4.0"
prettytable-rs = "0.8"
