# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tt"
version = "0.2.1"
authors = ["Torstein Nordgård-Hansen <torsteinnh@gmail.com>"]
description = "Timetrack is a small tool to help with timetracking during work hours."
edition = "2021"

[lib]
name = "timetrack"

[[bin]]
name = "tt"


[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parse_duration = "2.1"
dirs = "4.0"
prettytable-rs = "0.9"

[build-dependencies]
clap = { version = "3.2", features = ["derive"] }
clap_complete = "3.2"
